# drama-shorts-web

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PROMPT.md  README.md  dev.sh  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  repomix.config.json  run.sh
.github/workflows/: deploy.yml
apps/backend/: Dockerfile  Dockerfile.dev  entrypoint.sh  pyproject.toml
apps/backend/config/: settings.py  urls.py
apps/backend/prompts/: 2026-01-27.json  2026-02-03.json  2026-02-04.json
apps/backend/scripts/: create_superuser.py  init.py
apps/backend/videos/: admin.py  apps.py  constants.py  game_services.py  models.py  rework_services.py  services.py  status_config.py
apps/backend/videos/generators/: __init__.py  config.py  constants.py  exceptions.py  game_prompts.py  game_state.py  graph.py  prompts.py  state.py
apps/backend/videos/generators/nodes/: __init__.py  assets.py  concatenator.py  error_handler.py  game_assets.py  game_concatenator.py  game_planner.py  game_video_generator.py  planner.py  video_generator.py
apps/backend/videos/generators/services/: __init__.py  fal_client.py  gemini_planner.py  prompt_sanitizer.py  replicate_client.py
apps/backend/videos/generators/utils/: __init__.py  logging.py  media.py  video.py
apps/backend/videos/migrations/: 0001_initial.py  0002_product_alter_videogenerationjob_product_image_url_and_more.py  0003_add_video_asset_and_job_folder_structure.py  0004_add_job_asset_selection.py  0005_add_video_style.py  0006_add_granular_status.py  0007_add_game_character_support.py
apps/backend/videos/tests/: __init__.py  test_constants.py  test_models.py  test_services.py  test_status_config.py
config/: settings.py  urls.py
docs/: API_SCHEMA.md  PROMPT_STRUCTURE.md  PROMPT_TEMPLATE.json  TODO.md  crafton.md  replicate.md  막장가족.md
infra/: backup.sh  nginx.conf  provision_aws.sh  restore.sh  setup_ec2.sh
new-tasks/: AGENTS.md  ORIGIN.md  README.md  TODO.md  정리.md
new-tasks/prompts/: 2026-02-04.json  TEMPLATE_GUIDE.md  ep01.json  ep02.json  ep03.json  template.json
new-tasks/prompts/ep01/: 1.json  (+4 more)
new-tasks/scripts/: split_scenes.py
prompts/: 2026-01-27.json  2026-01-28.json  2026-02-03.json  2026-02-04.json
(+7 files in other folders)
