[project]
name = "drama-shorts-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.11"
dependencies = [
    "boto3>=1.42.35",
    "django>=6.0.1",
    "django-debug-toolbar>=6.2.0",
    "django-import-export>=4.4.0",
    "django-jazzmin>=3.0.1",
    "django-storages>=1.14.6",
    "gunicorn>=24.1.1",
]
